# rustrak

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.changeset/: config.json  cyan-turtles-smell.md  loud-houses-attack.md  quiet-moose-find.md  salty-onions-switch.md  seven-dogs-melt.md  shaggy-jars-arrive.md  some-radios-guess.md
apps/server/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  package.json
apps/server/migrations/: 20260119000000_initial_schema.down.sql  20260119000000_initial_schema.up.sql  20260119000001_add_projects_name_unique.down.sql  20260119000001_add_projects_name_unique.up.sql  20260119000002_create_auth_tokens.up.sql  20260119000003_create_issues.up.sql  20260119000004_create_groupings.down.sql  20260119000004_create_groupings.up.sql  20260119000005_create_events.up.sql  20260119000006_add_rate_limiting.down.sql  20260119000006_add_rate_limiting.up.sql  20260119000007_remove_soft_delete.down.sql  20260119000007_remove_soft_delete.up.sql  20260120000000_create_users.up.sql  20260121000000_create_alerting.down.sql  20260121000000_create_alerting.up.sql
apps/server/src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs
apps/server/src/auth/: extractors.rs  mod.rs  sentry_auth.rs  session.rs  token.rs
apps/server/src/db/: mod.rs
apps/server/src/digest/: mod.rs  worker.rs
apps/server/src/ingest/: decompression.rs  envelope.rs  mod.rs  parser.rs  storage.rs
apps/server/src/middleware/: auth.rs
apps/server/src/models/: alert.rs  auth_token.rs  event.rs  grouping.rs  installation.rs  issue.rs  mod.rs  project.rs  user.rs
apps/server/src/pagination/: cursor.rs  mod.rs
apps/server/src/routes/: alerts.rs  auth.rs  events.rs  health.rs  ingest.rs  issues.rs  mod.rs  projects.rs  tokens.rs
apps/server/src/services/: alert.rs  auth_token.rs  event.rs  grouping.rs  issue.rs  mod.rs  project.rs  rate_limit.rs  users.rs
apps/server/src/services/notification/: email.rs  mod.rs  slack.rs  webhook.rs
apps/server/tests/: e2e_tests.rs  integration_tests.rs  unit_tests.rs
apps/server/tests/common/: db.rs  fixtures.rs  mod.rs
apps/server/tests/e2e/: mod.rs  sentry_sdk_test.rs
apps/server/tests/integration/: alerts_api_test.rs  auth_test.rs  bootstrap_test.rs  concurrency_test.rs  digest_test.rs  events_api_test.rs  health_test.rs  ingest_test.rs  issues_api_test.rs  mod.rs  projects_api_test.rs  rate_limit_test.rs  tokens_api_test.rs
apps/server/tests/unit/: auth_test.rs  config_test.rs  decompression_test.rs  envelope_parser_test.rs  grouping_test.rs  mod.rs  notification_test.rs
(+99 files in other folders)
