[package]
name = "rustrak"
version = "0.1.0"
edition = "2021"
authors = ["Rustrak Team"]
description = "Ultra-lightweight error tracking server compatible with Sentry SDKs"
license = "GPL-3.0"

[dependencies]
# Web framework
actix-web = { version = "4.12.1", features = ["cookies"] }
actix-rt = "2.11.0"

# Session management
actix-session = { version = "0.10", features = ["cookie-session"] }

# Password hashing
argon2 = "0.5"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Logging
env_logger = "0.11.8"
log = "0.4.29"

# Environment
dotenvy = "0.15.7"

# Time
chrono = { version = "0.4.43", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "ipnetwork",
] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Slug generation
slug = "0.1.6"

# Error handling
thiserror = "2.0.18"

# Random number generation for tokens
rand = "0.9.2"

# Hex encoding
hex = "0.4.3"

# Compression (for decompressing gzip/deflate/brotli payloads)
flate2 = "1.1.8"
brotli = "8.0.2"

# Async utilities
futures-util = "0.3.31"
bytes = "1.11.0"

# Hashing (for grouping key hash)
sha2 = "0.10.9"

# IP address handling (must match sqlx's internal version)
ipnetwork = "0.20"

# CORS support
actix-cors = "0.7.1"

# Base64 encoding for pagination cursors
base64 = "0.22.1"

# HTTP client for notifications
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# HMAC for webhook signatures
hmac = "0.12.1"

# URL parsing/validation
url = "2.5.8"

# Async trait support
async-trait = "0.1.89"

# Email sending
lettre = { version = "0.11.19", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport"] }

[dev-dependencies]
# Test framework & fixtures
rstest = "0.26.1"

# HTTP testing for actix-web
actix-test = "0.1.5"
# Note: reqwest available from main dependencies

# Database testing with real PostgreSQL containers
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }

# Sentry SDK for E2E tests
sentry = { version = "0.46.1", features = ["test"] }

# Property-based testing
proptest = "1.9.0"

# Better assertion diffs
pretty_assertions = "1.4.1"

# Temp directories for tests
tempfile = "3.24.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
